# Django-Filters

./: db.sqlite3  pyproject.toml
core/: settings.py  urls.py
filters/: admin.py  models.py  myfilters.py  serializers.py  urls.py  views.py
filters/migrations/: 0001_initial.py  0002_remove_scientificnamemodel_genus_and_more.py
